[tool.poetry]
name = "rmrl"
version = "0.3.0"
description = "Render reMarkable documents to PDF"
authors = ["Robert Schroll <rschroll@gmail.com>",
           "Benedikt Tissot <benedikt.tissot@googlemail.com>"]
license = "GPLv3"
repository = "https://github.com/benneti/rmrl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfrw = "^0.4"
reportlab = "^3.5.59"
svglib = "^1.0.1"
xdg = "^5.0.1"
rmscene = "^0.4.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
